# godot_ratex

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  icon.svg.import  main.gd  main.tscn  project.godot  test.sh
.github/workflows/: ci.yml
addons/godot_ratex/: README.md  godot_ratex.gdextension  godot_ratex.gdextension.uid
addons/godot_ratex/demo/: godot_ratex_demo.gd  godot_ratex_demo.gd.uid  godot_ratex_demo.tscn
addons/godot_ratex/macos/: libgodot_ratex.arm64.dylib  libgodot_ratex.x86_64.dylib
src/: lib.rs
tests/: integration_test.rs
